<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kickers</string>
    <string name="action_settings">Settings</string>

    <!-- Pick players -->
    <string name="pick_players">Pick players</string>
    <string name="available_players">Available</string>
    <string name="chosen_players">Chosen</string>
    <string name="create_new_player">New player</string>
    <string name="start_playing">GO PLAY!</string>
    <string name="game_finished">GAME FINISHED!</string>

    <!-- Match area -->
    <string name="match_info">Match %1$s / %2$s</string>
    <string name="score_separator">&#160;:&#160;</string>
    <string name="select_game_rules">Select game rules</string>

    <!-- Match finished dialog -->
    <string name="match_statistics_title">Match statistics %1$s / %2$s</string>
    <string name="goals">Goals</string>
    <string name="own_goals">Own</string>
    <string name="matches_won">Wins</string>
    <string name="goals_balance">Diff</string>
    <string name="red_team_wins">Red team wins!</string>
    <string name="blue_team_wins">Blue team wins!</string>
    <string name="goto_next_match">Next match</string>

    <!-- Create player dialog -->
    <string name="save_player">Save player</string>
    <string name="create_player_title">Create new player</string>
    <string name="player_name">Player name</string>

    <!-- Register goal dialog -->
    <string name="goal">Goal!</string>
    <string name="own_goal">Frack! Own goal :(</string>
    <string name="delete_goal">Delete last goal</string>
    <string name="register_goal">Register goal</string>
    <string name="register_goal_title">Register goal for %1$s</string>
    <string name="game_name_exhibition_match">Mecz towarzyski</string>
    <string name="game_name_sparring">Sparing</string>

    <!-- Lineups Dialog-->
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="ok">OK</string>
    <string name="lineups">LINEUPS</string>
    <string name="next">NEXT</string>

</resources>
