<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/football_field_background"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_match_finished_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/create_player_title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/team" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/b_save"
        style="@style/button_normal_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_player" />

</LinearLayout>