<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="horizontal"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_available"
            style="@style/list_header_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/available_players" />

        <Button
            android:id="@+id/b_create_new"
            style="@style/button_normal_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/create_new_player" />

        <ListView
            android:id="@+id/lv_available_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/b_create_new"
            android:layout_below="@id/tv_available"
            android:divider="@android:color/transparent"
            android:padding="2dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_warning"
            style="@style/list_header_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="5dp"
            tools:text="4 players needed" />

        <Button
            android:id="@+id/b_play"
            style="@style/button_play_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/next" />

        <ListView
            android:id="@+id/lv_chosen_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/b_play"
            android:layout_below="@id/tv_warning"
            android:divider="@android:color/transparent"
            android:padding="2dp" />

    </RelativeLayout>

</LinearLayout>